syntax = "proto3";

option go_package = "/pb";

service  ProductService{
    rpc GetLatestProduct (LastProductRequest) returns (LastProductResponse);
  }
  
  message LastProductRequest {
    string trace_key = 1;
    int64 id = 2;
  }
  
  message LastProductResponse {
    string name = 1;
  }